nginx-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx-test
          image: peetg/nginx-test:latest
          ports:
            - containerPort: 80
